<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_backdrop"
                    android:layout_width="230dp"
                    android:layout_height="230dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:contentDescription="@string/profile_picture"
                    android:src="@drawable/image_32"
                    app:civ_border_color="@color/off_white"
                    app:civ_border_width="@dimen/margin_2dp" />


                <LinearLayout
                    android:id="@+id/lyt_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_40"
                        app:startIconDrawable="@drawable/ic_person">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_8dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_40"
                        app:startIconDrawable="@drawable/ic_person">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_8dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_40"
                        app:startIconDrawable="@drawable/ic_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_8dp" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_40"
                        app:startIconDrawable="@drawable/ic_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_8dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_40"
                        app:startIconDrawable="@drawable/ic_location">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_8dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_40"
                        app:startIconDrawable="@drawable/ic_domain">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_company"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/company" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_8dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_40"
                        app:startIconDrawable="@drawable/ic_public">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_website"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/website" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_16dp" />

                    <Button
                        android:id="@+id/bt_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/off_white"
                        android:text="@string/submit"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_8dp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:clickable="true"
            android:tint="@android:color/white"
            app:backgroundTint="@color/gold"
            app:fabSize="normal"
            app:layout_anchor="@id/lyt_form"
            app:layout_anchorGravity="top|end|right"
            app:rippleColor="@android:color/white"
            app:srcCompat="@drawable/ic_photo_camera" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
